@@ -1,3 +1,7 @@
+2008-09-29  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/GenericParameter.cs: override TypeReference.Scope.
+
 2008-09-25  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil.Binary/MemoryBinaryWriter.cs: Make sure QuadAlign
